--- a/app/assets/translations/ru_en.csv
+++ b/app/assets/translations/ru_en.csv
@@ -6,3 +6,4 @@ SERVER_SELECTION_THEME_EDITOR,Редактор тем,Theme editor
 SERVER_SELECTION_SETTINGS,Настройки,Settings
 SERVER_SELECTION_EXIT,Выход,Exit
 SERVER_SELECTION_NO_SERVERS,У вас нет серверов в данный момент.,You have no servers at this moment.
+SERVER_SELECTION_SERVER_EDIT,Изменение сервера,Edit server
