--- a/app/assets/translations/ru_en.csv
+++ b/app/assets/translations/ru_en.csv
@@ -28,6 +28,7 @@ SETVER_SELECTION_ADD_SERVER,Добавление сервера,Add server
 
 SETTINGS_VIEW_SETTINGS_TITLE,Настройки приложения,App settings
 SETTINGS_VIEW_BASE_SETTING_TITLE,Базовые настройки,Base settings
+SETTINGS_VIEW_LOAD_THEME_LBL,Установка тем,Install themes
 SETTINGS_VIEW_LOCALIZATION_LBL,Локализация,Locale
 SETTINGS_VIEW_THEME_LBL,Тема,Theme
 SETTINGS_VIEW_SAVE_AND_EXIT,Сохранить и выйти,Save and exit
